--- a/site/index.html
+++ b/site/index.html
@@ -6,8 +6,7 @@
     </head>
     <body>
         <h1>
-            ctm tu ramiro
-
+            ctm tu ramiro eres un jueperrra
         </h1>
     </body>
 </html>
