--- a/site/index.html
+++ b/site/index.html
@@ -1,15 +1,19 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <meta> charset="utf-8"
+        
         <title>
             ctm ramiro!!!!!
         </title>
     </head>
     <body>
-        <h1>
-        abre este link pa una sorpresa :D
+        <h1> 
+         abre este link pa una sorpresa :D
         </h1>
             <img src="https://i.pinimg.com/originals/7a/54/ee/7a54ee2ac50a2d2542a5b445faaf2a16.jpg
             " alt="">
         </address>
+
     </body>
 </html>
