--- a/site/index.html
+++ b/site/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta> charset="utf-8"
-        
-        <title>
-            ctm ramiro!!!!!
-        </title>
-    </head>
+<html lang="en">
+    <title>
+        ctm ramiro!!!!!
+    </title>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <body>
+        <div>div1: aqui ctmramiro
+        </div>
+        <div>
+            div2: aqui tmbn ctmramiro
+        </div>
+        <span>
+            span 1:following right after div2
+        </span>
+        <div>
+            div3: following right after span 1 inside div 3
+        </div>
         <h1> 
          abre este link pa una sorpresa :D
         </h1>
             <img src="https://i.pinimg.com/originals/7a/54/ee/7a54ee2ac50a2d2542a5b445faaf2a16.jpg
             " alt="">
-        </address>
 
     </body>
 </html>
