--- a/site/index.html
+++ b/site/index.html
@@ -6,22 +6,17 @@
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <body>
-        <div>div1: aqui ctmramiro
-        </div>
-        <div>
-            div2: aqui tmbn ctmramiro
-        </div>
-        <span>
-            span 1:following right after div2
-        </span>
-        <div>
-            div3: following right after span 1 inside div 3
-        </div>
+       
         <h1> 
          abre este link pa una sorpresa :D
         </h1>
             <img src="https://i.pinimg.com/originals/7a/54/ee/7a54ee2ac50a2d2542a5b445faaf2a16.jpg
             " alt="">
+<h2>subheading 2
+</h2>
+<h3>subheading3</h3>
+<h4>subheading4</h4>
+<h5>subheading5</h5>
 
     </body>
 </html>
