--- a/site/index.html
+++ b/site/index.html
@@ -8,15 +8,19 @@
     <body>
        
         <h1> 
-         abre este link pa una sorpresa :D
+         esta va pal ramiro
         </h1>
             <img src="https://i.pinimg.com/originals/7a/54/ee/7a54ee2ac50a2d2542a5b445faaf2a16.jpg
             " alt="">
-<h2>subheading 2
+<h2>razones por las q odio a ramiro
 </h2>
-<h3>subheading3</h3>
-<h4>subheading4</h4>
-<h5>subheading5</h5>
+<ul>
+<li>se duerme en clase</li>
+<li>me reprobo alv</li>
+<li>ya esta muy viejo ese we</li>
+<li>no se ocupan muchas razones pa odiarlo</li>
+
+</ul>
 
     </body>
 </html>
