--- a/site/index.html
+++ b/site/index.html
@@ -11,7 +11,8 @@
          esta va pal ramiro
         </h1>
             <img src="https://i.pinimg.com/originals/7a/54/ee/7a54ee2ac50a2d2542a5b445faaf2a16.jpg 
-            "width="800" height="700">
+            " width="800" height="700" alt="">
+
 <h2 id="lista">razones por las q odio a ramiro
 </h2>
 <ul>
