--- a/site/index.html
+++ b/site/index.html
@@ -29,7 +29,7 @@
 </p>
 </section>
 <h4>quieres volver a leer las razones por las q odio a ese we? picale aqui</h4>
-<a href="#lista"></a>
+<a href="#lista">#lista</a>
     </body>
     
 </html>
